@fix: CORS configurable via env var y fixes Helm chart
- SecurityConfig: leer CORS_ALLOWED_ORIGINS desde env var (antes hardcodeado)
  Soporta múltiples orígenes separados por coma
- backend-configmap: añadir soporte para backend.env.corsAllowedOrigins override
- postgres-statefulset: corregir probe pg_isready (args separados, valores Helm)
- ingress: corregir template certManagerIssuer (carácter '-' inválido en Go template)
- values.yaml: añadir campo certManagerIssuer en ingress

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>